{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 49,
  "lineage": "87f2e106-d05e-caf9-186e-972b16043808",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365534618911:vpc/vpc-08a0496685b21642d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d24af0740bd89cb2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01c1fc9d435c42a03",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a0496685b21642d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f70344337879c1d9",
            "owner_id": "365534618911"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-028815813165f91ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-09dda3f6433b28d6c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-028815813165f91ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b94ff62b55b40870",
            "private_dns": "ip-172-31-6-250.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.250",
            "public_dns": "ec2-54-183-216-166.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.216.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e40d6e55e07e4d82",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-0",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-0",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6",
              "sg-0f1a39f2932dcad64"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-07ba75056ebaf9ce5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d14106f219573409",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-07ba75056ebaf9ce5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d528b84011c1a84",
            "private_dns": "ip-172-31-14-5.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.5",
            "public_dns": "ec2-13-57-34-209.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.34.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0293aa2979ec8e578",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-1",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-1",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6",
              "sg-0f1a39f2932dcad64"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-0fc6dcd4c49ce3b8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0aedbf61e888c7ceb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-0fc6dcd4c49ce3b8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a68c3f7391646ca",
            "private_dns": "ip-172-31-8-40.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.40",
            "public_dns": "ec2-18-144-27-120.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.27.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031ca4ededf247a84",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-2",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-2",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6",
              "sg-0f1a39f2932dcad64"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-0149d0da92e0a9286",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-0149d0da92e0a9286",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047e206a4c6c9b111",
            "private_dns": "ip-172-31-1-203.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.203",
            "public_dns": "ec2-54-67-81-244.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.81.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e0b91cd678f288f",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-0",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-0",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-02d438e82fd5581ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-02d438e82fd5581ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b75710b92c8969f",
            "private_dns": "ip-172-31-0-235.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.235",
            "public_dns": "ec2-54-219-118-134.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.118.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027043f687e7e68c3",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-1",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-1",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0082110c417e4726e",
            "arn": "arn:aws:ec2:us-west-1:365534618911:instance/i-055fac3538c8275a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20240101095150378200000002",
            "id": "i-055fac3538c8275a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nomadKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f1dd620e8878869e",
            "private_dns": "ip-172-31-2-38.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.38",
            "public_dns": "ec2-54-177-136-195.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.136.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092647eab606b8a4c",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01caff355fe8a8479",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-2",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-2",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004636465df1e827e",
              "sg-03f898a22e171983b",
              "sg-0b5dcd24657b55df6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365534618911:security-group/sg-0b5dcd24657b55df6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5dcd24657b55df6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-allow-all-internal",
            "name_prefix": "",
            "owner_id": "365534618911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a0496685b21642d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clients_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365534618911:security-group/sg-0f1a39f2932dcad64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1a39f2932dcad64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-clients-ingress",
            "name_prefix": "",
            "owner_id": "365534618911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a0496685b21642d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_nomad_ui_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365534618911:security-group/sg-004636465df1e827e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004636465df1e827e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-ui-ingress",
            "name_prefix": "",
            "owner_id": "365534618911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a0496685b21642d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365534618911:security-group/sg-03f898a22e171983b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f898a22e171983b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-ssh-ingress",
            "name_prefix": "",
            "owner_id": "365534618911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a0496685b21642d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}